# seg_ana

./: README.md  imagej_data.csv  new_data.csv  og_data.csv  pyproject.toml  run_tests.py  save_masks.py  seg_ana_comparison.Rmd  test.csv  test_improved_metrics.py  test_protrusion_detection.py  validate_circles.py  visualize_metrics.py  visualize_protrusions.py
docs/: metrics_explanation.md  progress_report_20250227_1044.md  progress_report_20250227_1312.md  progress_report_20250227_1700.md  progress_report_20250303_1800.md  synthetic_data_testing.md  tech_doc.md
examples/: basic_analysis.py  batch_processing.py
isolated_protrusions_test/: protrusion_comparison_results.csv  shape_with_3_protrusions.npy  shape_with_6_protrusions.npy  shape_with_9_protrusions.npy
mask_exports/: circle_noise_0.0.npy  circle_noise_0.1.npy  circle_noise_0.2.npy  circle_noise_0.3.npy  ellipse_1.0_1.npy  ellipse_2.0_1.npy  ellipse_3.0_1.npy  protrusions_3.npy  protrusions_6.npy
masks/: A10_0.985.npy  A11_0.986.npy  A1_0.979.npy  A2_0.985.npy  A3_0.923.npy  A4_0.986.npy  A5_0.986.npy  A8_0.981.npy  A9_0.985.npy  B10_0.985.npy  B11_0.981.npy  B1_0.984.npy  B2_0.985.npy  B3_0.983.npy  B4_0.984.npy  B9_0.984.npy  C11_0.970.npy  C12_0.985.npy  C1_0.984.npy  C2_0.984.npy  C3_0.984.npy  C4_0.971.npy  C9_0.985.npy  D10_0.985.npy  D11_0.883.npy  D1_0.985.npy  D2_0.981.npy  D3_0.986.npy  D4_0.983.npy  D9_0.983.npy
masks_results/: metrics_summary_20250227_125229.csv  metrics_summary_20250228_095843.csv  metrics_summary_20250228_105725.csv
protrusion_test/: shape_with_0_protrusions.npy  (+3 more)
(+40 files in other folders)
